2015-03-16  Mike Frysinger  <vapier@gentoo.org>

	* config.in, configure: Regenerate.

2015-03-14  Mike Frysinger  <vapier@gentoo.org>

	* Makefile.in (SIM_EXTRA_CLEAN): Delete.
	(all): Drop interp.o dependency.
	(interp.o, mcore-clean): Delete rules.

2015-03-14  Mike Frysinger  <vapier@gentoo.org>

	* Makefile.in (SIM_EXTRA_CFLAGS): Set to
	-DSIM_USE_DEPRECATED_RUN_FRONTEND.
	(SIM_RUN_OBJS): Set to run.o.

2015-03-14  Mike Frysinger  <vapier@gentoo.org>

	* configure.ac (AC_CHECK_HEADERS): Delete.
	* aclocal.m4, configure: Regenerate.

2015-02-20  Mike Frysinger  <vapier@gentoo.org>

	* interp.c: Delete sysdep.h and netinet/in.h includes.
	Include string.h and unistd.h.
	* sysdep.h: Delete.

2015-02-19  Mike Frysinger  <vapier@gentoo.org>

	* interp.c (sim_kill): Delete unused func.

2014-12-27  Anthony Green  <green@moxielogic.com>

	* interp.c (EXTRACT_OFFSET): Define.
	(sim_resume): ldo/sto instructions now use 16 bit offset instead
	of 32.  Also swap mul.x/umul.x opcodes (reversed by mistake).

2014-12-25  Anthony Green  <green@moxielogic.com>

	* interp.c (sim_resume): Whitespace changes to align with GDB
	coding standard.

2014-12-24  Anthony Green  <green@moxielogic.com>

	* interp.c (sim_resume): Add mul.x and umul.x instructions.

2014-12-12  Anthony Green  <green@moxielogic.com>

	* interp.c (sim_resume): Add zex instructions.

2014-08-19  Alan Modra  <amodra@gmail.com>

	* configure: Regenerate.

2014-08-15  Roland McGrath  <mcgrathr@google.com>

	* configure: Regenerate.
	* config.in: Regenerate.

2014-04-02  Anthony Green  <green@moxielogic.com>

	* interp.c (sim_resume): Add new sign-extend instructions.

2014-03-10  Mike Frysinger  <vapier@gentoo.org>

	* interp.c (sim_do_command): Add const to cmd.

2014-03-05  Mike Frysinger  <vapier@gentoo.org>

	* interp.c (sim_load): Add const to prog.

2014-02-17  Mike Frysinger  <vapier@gentoo.org>

	PR gdb/16450
	* interp.c (interrupt): Delete.
	(sim_resume): Delete signal(SIGINT) handling.
