@@ -1,3 +1,8 @@
+2015-03-24  Mike Frysinger  <vapier@gentoo.org>
+
+	* Makefile.in (SIM_OBJS): Add sim-command.o.
+	* interp.c (sim_do_command): Delete.
+
 2015-03-16  Mike Frysinger  <vapier@gentoo.org>
 
 	* config.in, configure: Regenerate.
